--- a/cfb2.html
+++ b/cfb2.html
@@ -22612,5 +22612,69 @@ nachvollziehen kann).</p>
 </div>
 </div>
 
+<div class="message">
+<div class="meta">
+	<div class="user">bassdrummer</div>
+	<div class="id">1331</div>
+	<div class="date">2020-12-09 08:13:02</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hi beauty.takes.sacrifice ,</p>
+
+<p>deine Geschichte klingt spannend. Hat sie denn am Schluss auch sichtlich gezittert?</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">ferfred2</div>
+	<div class="id">1333</div>
+	<div class="date">2020-12-26 00:21:01</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hallo Martin,</p>
+
+<p>natuerlich sind schon viele Gedanken zum Thema ausgetauscht. Unabhaengig davon ist es dennoch interessant, wie sich Lisa so in diesem Winter schlaegt.</p>
+
+<p>Eine Frage erschliesst sich mir noch nicht: Deinem Sohn scheint es ja wichtig zu sein, dass seine Freundin schlank ist. Anders als in den Ausfuehrungen von Iceman scheint es fuer ihn nicht so wichtig zu sein, dass seine Freundin sich so quaelt, um diese Figur zu erhalten. Auch die duenne Kleidung im Winter scheint ihm nicht so wichtig zu sein - oder hast Du bei seiner neuen Freundin in der Zwischenzeit etwas Aehnliches beobachtet?</p>
+
+<p>Also, wie kam es dazu, dass er von Lisa ein solches Verhalten "erwartete"? Oder hat es Lisa selbst so provoziert?</p>
+
+<p>Manche Antwort koennen wir dazu wahrscheinlich nur von Lisa selbst erhalten. Koenntest Du Dir vorstellen, dass sie sich selbst hier zu Wort meldet mit oder ohne Markus?</p>
+
+<p>Weihnachtliche Gruesse</p>
+
+<p>Ferfred</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">Martin99</div>
+	<div class="id">1335</div>
+	<div class="date">2020-12-30 14:39:14</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hallo Ferfred, 
+Leider muss ich dich enttäuschen, Lisa und Markus wissen nicht, dass ich hier über sie schreibe und ich habe mich deshalb auch schon gefragt, ob ich hier überhaupt über sie schreiben darf. 
+Zu deinen weiteren Fragen. Wenn ich den Eindruck erweckt habe, dass es meinen Sohn nicht wichtig ist eine schlanke Freundin zu haben, dann ist das definitiv falsch. Schon als er Lisa kennengelernt hat war sie sehr schlank, aber er hat ihr immer wieder verstehen zu geben, dass er von Lisa erwartet noch weiter abzunehmen. Fand ich ziemlich unfair, Gerade im Sommer hat er Lisa immer wieder mit viel jüngeren noch schlankeren Mädels verglichen. Er schaute diesen Mädels nach und fragte Lisa: Hast du gesehen, wie schlank DIE war? Wenn Lisa schon den ganzen Tag kaum etwas gegessen hatte und dadurch immer kraftloser wurde, ihr Magen laut knurrte,  und sie am Abend einen Salat mit Dressing  bestellen wollte, meinte er: Aber Lisa, doch nicht mit Dressing, denk an deine Diät. Lisa erschrak und meinte zum Kellner: Stimmt, bringen sie mir nur einen Espresso, der muss reichen und macht mich wieder fit. Mein Sohn zündete ihr eine Zigarette an, streichelte zärtlich ihren nackten Rücken und ihre Schenkel und ermahnte Lisa: Das glaube ich auch, alles andere wird nur zu Fett  und das möchten wir doch beide nicht. Das war auch die Zeit in der Lisa sich zur starken Raucherin entwickelte. Sie ist bis heute nicht mehr davon losgekommen, kaum ist eine Zigarette aus braucht sie schon die nächste. Sie sagt mir nicht wie viel sie wirklich raucht, aber ich habe schon mehrfach erlebt, dass ich zwei Schachteln Zigaretten für sie gekauft habe und sie mich nach ein paar Stunden gebeten hat, ihr Nachschub zu beschaffen. 
+Genauso wichtig und im Winter  vielleicht sogar noch wichtiger ist ihm die knappe Kleidung. Schliesslich hat er meist die Klamotten für Lisa ausgesucht. Sicher hat ihm Lisa anfangs damit beeindrucken wollen, auch nachdem ich ihr diese Vorliebe von meinem Sohn anvertraut habe und mich noch heute mein schlechtes Gewissen plagt. Ich glaube er geniesst es regelrecht, dass sich Lisa für ihn quälte. Habe ja schon mal geschrieben, dass es für mich in Richtung SM geht. Ich habe es oft so empfunden und bewundere noch heute, was sie auf sich nimmt,  um die Männerwelt, einschließlich meiner Person,  zu beeindrucken. Habe schon mal vor längerer Zeit über unsere gemeinsame Schlittenfahrt geschrieben, du kannst dir nicht vorstellen, wie durchgefroren Lisa schon war und er ihr auch noch die Decke von ihren nackten zitternden Beinen weggenommen hat oder ich mehrfach erleben durfte, dass er Lisa total durchgefroren und stark erkältet mit schon bläulicher Gänsehaut aufgefordert hat noch eine Runde im See zu schwimmen oder mit seinen Kumpels zum nächsten Glühweinstand zu wechseln. Ein Kumpel verabschiedete sich, weil ihm und vor allem seiner Freundin zu kalt war.Dabei nahm er Lisa in den Arm, fühlte ihre zitternde Gänsehaut, die wie so oft nichts als einen Minirock und ein knappes Bandeau Top trug und fragte sie: Lisa, du bist so eiskalt, hast überall Gänsehaut, wie du zitterst und bist schon wieder erkältet, ich habe dich noch nie in warmen Klamotten gesehen, aber es ist heute doch so kalt und du mit so viel nackter Haut. Warum trägt du keine Winterklamotten ? - Lisa hatte längst die Kontrolle über ihren Körper verloren und hustete mit klappernden Zähnen: Oh ja, bin schon echt durchgefroren, aber die Klamotten hat mein Schatz für mich ausgesucht. Er mag es etwas freizügiger und ich kann ihn doch nicht enttäuschen.  Seine Freunde und auch ich drängten zum Aufbruch und versuchten Lisa zu überzeugen wenigstens eine Jacke oder Pullover überzuziehen. Mein Sohn prüfte immer intensiver ihre Gänsehaut: Bist echt eiskalt, aber ich finde dich heiss in deinem Outfit. Er streichelte weiter zärtlich ihren zitternden Körper und küsste Lisa: Ich mag deine Gänsehaut. Dicke Winterklamotten verdecken viel zu viel, aber wenn es dir zu kalt wird, kannst du natürlich meine Jacke bekommen. Lisa verlor kurz die Kontrolle über ihren Körper verlor, fing sich aber sofort wieder und stammelte mit klappernden Zähnen: Danke Schatz, ich brauche wirklich keine Jacke, höchstens eine  Zigarette, in deiner Nähe ist mir niemals zu kalt. Mein Sohn strahlte:  Seht ihr Lisa möchte wirklich keine Jacke, ihr macht die Kälte nichts aus. Er zündete Lisa eine Zigarette an und fragte Lisa: Gut dann hole ich uns noch einen Glühwein, es macht dir doch nichts aus, wenn wir noch bleiben?  Ohne eine Antwort abzuwarten holte er noch eine Runde Glühwein. Ich nahm Lisa fest in den Arm, ihre Gänsehaut war eiskalt und schimmerte bläulich, sie  schaffte es mit ihrer eiskalten zitternden Hand kaum ihre Zigarette zu halten und hustete ganz schlimm und konnte kaum allein stehen und zitterte am ganzen Körper. Ich versuchte sie zu überzeugen, meine Jacke anzuziehen. Sie klammerte sich an mich, küsste mich mit ihren blauen Lippen auf die Wange: Danke Martin. Oh Gott ist mir kalt, der kalte Wind kühlt mich immer weiter aus, der Glühwein wird mich wieder aufwärmen, alles für ein wenig Wärme,  aber bitte keine Jacke, wenn ich nur nicht so Zittern würde, aber das hilft beim Abnehmen. Als mein Sohn zurück kam, lief ihm Lisa entgegen und stand zitternd vor ihm: Danke für den Glühwein, der wird mich wieder aufwärmen. Er lächelte sie an: Ich habe an deine Figur gedacht und dir ein Wasser mitgebracht, du musst dich nicht aufwärmen, ich finde dich heiß, wenn du Gänsehaut trägst, die auch im Winter zeigst und dafür noch weiter abnehmen möchtest .
+ Die geschilderte Situation zeigt für mich ziemlich deutlich, wie wichtig ihm bei Lisa war, dass sie sich für ihre schlanke Linie und dünne und freizügige Klamotten in der grössten Kälte quälte. Das er das bei seiner jetzigen Freundin nicht so konsequent zeigt, liegt meiner Meinung daran, dass er sie nicht wirklich liebt. Er findet sie vorallem gut, weil sie noch so jung ist. 
+Meinst du ich habe schuld,dass er sich von Lisa getrennt hat?
+Ich wollte Lisa schützen, aber manchmal bereue ich es heute. </p>
+
+<p>VG Martin </p>
+
+</div>
+</div>
+</div>
+
 </body>
 </html>
