Update to page 303

--- a/cfb.html
+++ b/cfb.html
@@ -24202,5 +24202,97 @@ Deine Erlebnisse sind zwar nicht so verrueckt, wie manch andere Schilderungen hi
 </div>
 </div>
 
+<div class="message">
+<div class="meta">
+	<div class="user">frogger4y</div>
+	<div class="id">1517</div>
+	<div class="date">2022-04-26 20:41:19</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hi Ferfred :)</p>
+
+<p>We had a very good Easter holiday, we went to the cabin right after Hanne finished work on Wednesday. She had not eaten anything that day, and "naughty" as I am, I ate a big meal before I picked her up at work. So when we got to the cabin I quickly opened some wine so that day there was only smoke and wine on her :)
+The next morning we got up quite early to go skiing (cross country) Hanne was only wearing ripped jeans and a cropped top, and she was barefoot in the ski boots, at the beginning of the day the sun was quite warm so she did not freeze then but rather sweaty a little. I told her we were going for a short walk, but I tricked her so we went all day;) When we had gone a few hours we sat down and took a break, she had nothing to sit on so she sat straight in the snow.
+I had packed a packed lunch, but only for myself. I tossed a pack of cigarettes to Hanne and said good lunch :) She looked quite startled when she discovered that I had not brought food for her, but she said nothing even though she was obviously very hungry, Instead she smoked 5- 6 cigarettes during the break. She is so sexy when she smokes.
+As we went on, the sun was almost gone and it was getting colder. I saw that Hanne started to freeze when we walked, we walked like this for a couple of hours before she started saying she was very cold and that she had very sore feet. I said that we must have gone wrong (I deliberately went the longest route) and that you had a few hours left before we reached the cabin. I asked if she did not want a cigarette where she went, she looked at me strangely but I said it would have been very sexy to see her ski and smoke, so she said yes. And every time she finished smoking, I gave her a new one.
+When we got to the cabin she froze a lot, she had big goosebumps and crooked teeth.
+When she took off her ski boots, she had large ugly gait wounds on her heels. Barefoot in ski boots is probably not recommended. I fetched a first aid kit so she could clean and patch the wounds, she was still sitting outside while she did it. I hurried to eat while she did this and came out with wine for her, we sat out drinking all evening, Hanne quickly got drunk since she was completely empty in the stomach and do not think she thought that going in was a possibility even if she sat shivering from the cold. It got so cold that I put on a thick jacket and hat, while she sat there barefoot in cropped top and jeans. And tried to warm up on cigarettes.
+The next morning I feel a little sorry for her so I made some breakfast for her, I cooked 1 egg for her and 1 slice of toast. We ate this outside and afterwards she lay in the sun wall and sunbathed, she was still wearing the same clothes as the day before. When I saw that she had fallen asleep, I took a bucket of water and threw it over her lol. She jumped up fiercely and ran after me barefoot through the snow she got hold of me and we rolled around playing in the snow. She was drenched in snow and water when we finished, but she did not change clothes but we sat outside smoking and drinking some wine this evening as well. Her gait was so bad that she could not wear shoes so she just had to be barefoot, I saw that her feet were fiery red from the cold and I was very happy about it :) I cooked, and I was a little sadistic towards her when I asked if she might refrain from eating since she had already eaten that day and we were going to have guests the next day for dinner so it was perhaps best that she fasted and rather smoked a little extra. She did not object, but just continued and chain smoke. When we went to bed she was so cold that I started massaging her feet as if they were so icy cold, we kissed and warmed each other (if you know what I mean) before we fell asleep.
+The next day a couple of friends came by us and we ate outside in the cold, I had lit a fire and a fire pan and we sat on reindeer skins. Everyone sat dressed except Hanne, she had changed, but sat as usual in cropped top, holey jeans and barefoot. Our friends asked if she was not frozen, but she said no that the fire warmed her, even though the goosebumps on her arms and thighs said otherwise. Our friends are used to seeing Hanne freeze so they said nothing more.
+Her chafing has bothered her so much that almost 2 weeks later she still can not wear shoes so she now wears flip-flops, to my great happiness :)</p>
+
+<p>Thanks for the tips on diet, but a diet where she can not smoke I do not want her on, I only love when she smokes. But after Easter she has kept to one meal a day and she has not eaten until about 20-21, so she goes hungry most of the day :)
+But she still has a long way to go before she's at Lisa's level.</p>
+
+<p>Cutoff jeans shorts are nice, but I actually prefer that she wears long jeans, but several of the ones she wears the most are very hollow and show a lot of skin and where the thighs are is just a big hole :)</p>
+
+<p>Hope to hear from you soon :)</p>
+
+<p>Best regards, Frogger</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">frogger4y</div>
+	<div class="id">1518</div>
+	<div class="date">2022-04-26 20:43:32</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hi Martin.
+Lisa is a true godess:)
+I just love how stared she is and how much she smokes.
+Your son is very lucky.
+I really hope my girlfriend will reach Lisa's level.</p>
+
+<p>Best regards, Frogger
+.</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">sophie01</div>
+	<div class="id">1519</div>
+	<div class="date">2022-05-01 12:31:20</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hi ihr!</p>
+
+<p>Tut mir leid, dass ich so lange gebraucht habe, es war eine stressige Woche und auch ein volles Wochenende. Aber ich hab viel nachgedacht!</p>
+
+<p>Ferfred, klar kann ich kurz was zu mir sagen: Wie du richtig vermutet hast, bin ich noch recht jung, nämlich 19, und studiere jetzt seit im vierten Semester Psychologie (hab also während Corona angefangen ...) und bin dazu in eine WG hier an meinem Studienort gezogen, in der ich jetzt mit zwei anderen Mädels wohne. </p>
+
+<p>Ich habe orange-rote Haare und eine normale bis schlanke, sportliche Figur, würde ich sagen. Apropos Figur: Die scheint euch ja auch super wichtig zu sein. Ich wollte darauf im letzten Beitrag schon eingehen, aber der war dann schon lang genug. Jedenfalls achtet mein Freund ja schon auch auf meine Figur und mir ist schon deutlich aufgefallen, dass er es gerne schlank mag. Z. B. habe ich ihm einmal gesagt, dass ich seine starken Arme mag und er hat daraufhin seine Hand auf meinen Bauch gelegt, gelächelt und erwidert: "Ich mag deinen flachen Bauch." Uff! Klar hat mir das geschmeichelt, aber ich hab mich auch ein bisschen unter Druck gesetzt gefühlt. "Gar kein Druck oder so, haha", hab ich dann geantwortet.</p>
+
+<p>Oder ein anderes Mal ging es darum, wie wir jeweils vegan geworden sind (bin ich seit nicht ganz einem Jahr, er schon ne Weile länger; er ist ja auch schon 25), und er hat mich gefragt, ob ich auch erstmal ein paar Kilogramm abgenommen hätte, denn ihm war das anscheinend so gegangen. Ich hab ihm dann erzählt, wie es bei mir war: Tatsächlich habe ich auch etwa 3 kg abgenommen, und war dieselben 3 kg, die ich seit meinem Auszug von zu Hause zugelegt hatte. Corona und die Kochkünste meiner einen Mitbewohnerin haben da leider am Anfang Spuren hinterlassen. Seit ich vegan esse, koche ich fast immer selbst und achte halt darauf, dass es gesund ist. Muss ich auch, denn "von Natur aus" (wenn es das überhaupt gibt) bin ich nicht die Dünnste, womit ich als Kind und als Jugendliche auch ziemlich unzufrieden war, bis ich dann in den letzten zwei Schuljahren mehr auf meine Ernährung geachtet und von 65 auf 54 kg abgenommen habe. Bei 1,73 m übrigens.</p>
+
+<p>Das habe ich ihm jedenfalls dann erzählt und er schien positiv beeindruckt: "Wow, nicht schlecht! Ich dachte, du wärst einfach natürlich so schön schlank, aber dann Respekt! Bist du jetzt mit den 54 kg wieder zufrieden?" Keine Ahnung, was ich da sagen soll. "Ja, schon. Ist okay", habe ich gesagt.</p>
+
+<p>Worin liegen meine Bedenken, fragst du, Ferfred. In mehreren Dingen eigentlich. Zum einen kann das ja nicht so gesund sein, dauernd zu frieren, und so zu hungern wie Martins Lisa z. B. geht auf Dauer bestimmt auf die eine oder andere Weise schief. Aber das verlangt ja auch niemand von mir!</p>
+
+<p>Vor allem laufen diese Fixierung auf mein Äußeres und dieser Wunsch, mir vorschreiben zu wollen, was ich trage, eigentlich komplett gegen das, wie ich mir eine Beziehung immer vorgestellt habe. Der Mann sollte mich ja nicht (oder nicht hauptsächlich) für mein Äußeres lieben und mir außerdem die Freiheit lassen, zu tragen, was ich will. Und dass er mich gerne frieren lässt, ist eigentlich geradezu toxisch!</p>
+
+<p>Aber trotzdem fühlt es sich mega gut an! Ich liebe seine Komplimente, seine Aufmerksamkeit. Ich liebe es, was Besonderes zu sein und auch die Blicke der anderen (Passanten, etc.) Vielleicht liebe ich es auch deshalb, weil ich es eigentlich verabscheuen sollte, weil es eben so verboten ist. So ähnlich ging es mir auch damals, als ich während der Schulzeit abgenommen habe: Für mich war das genau richtig und ich habe mich immer wohler in meiner Haut gefühlt, aber viele Freundinnen und v. a. meine Mutter und Tanten waren super besorgt und haben immer gesagt, ich solle doch mehr essen oder auch einen Kuchen nehmen, bla, bla, bla. Es ist ja nicht einmal so, dass ich extrem dünn geworden wäre; einfach ein bisschen schlanker eben ... Da hab ich schon gemerkt, was mir gerade auch wieder bewusst wird: Sobald man sich anders verhält, wird man skeptisch beäugt, aber nur so kann man dem Mittelmaß entkommen. Man muss gerade das tun, was die "normalen Leute" nie erwägen würden.</p>
+
+<p>Ich weiß noch nicht ganz genau, was das jetzt für mich heißt, aber auf jeden Fall habe ich Lust, mich ein bisschen herauszufordern. Seit ich letztes Mal geschrieben habe, habe ich meinen Freund zwar nicht gesehen (Ich habe ihm gesagt, dass ich etwas Zeit zum Nachdenken brauche.), aber hab trotzdem leichtere Kleider getragen, als ich es normalerweise bei dem Wetter tun würde. Wenn die Sonne mittags rauskommt, ist es zwar schon schön warm, aber sobald sie weg ist und der Wind weht, muss ich gerade in meinen Tops schon noch frieren. Vor allem wenn ich morgens in die Uni fahre, ist es echt noch kalt.</p>
+
+<p>Ich hab auch in den letzten Tagen schon mal meine kurzen Hosen rausgeholt. War zwar auch cool, da die einzige in der Uni zu sein, die die jetzt schon trägt, aber hab halt wieder gemerkt, dass ich mit meinen Beinen noch nicht so zufrieden bin. Da muss ich auf jeden Fall noch was machen. Heute Vormittag beim Brunchen bei Freundinnen war ich aber schon brav und hab nur ein bisschen Salat gegessen :)</p>
+
+<p>Mist, jetzt wird mir die Zeit doch wieder knapp, weil ich gleich zum Tanzkurs muss, aber ich wollte noch ein bisschen was zu Lisa fragen, Martin. Sie scheint ja echt auf Dauerdiät zu sein. Isst sie da nicht viel zu wenig, sodass sie auf Dauer total abmagert? Es klingt ja gerade so, dass sie quasi nie eine normale Mahlzeit isst. Wenn sie allein ist, isst sie vermutlich ein kleines bisschen mehr, als wenn sie mit Markus irgendwo hingeht oder? Und sie geht ja immer im See schwimmen. Ist das alles, was sie an Sport macht oder macht sie auch Krafttraining? Ich mache immer Workouts zu Hause oder jogge zum Park und mache da welche. Ich will ja schon auch fit sein und nicht nur dünn.</p>
+
+<p>Jetzt muss ich aber echt los. Lieben Gruß an euch!</p>
+
+</div>
+</div>
+</div>
+
 </body>
 </html>
