Update to page 306

--- a/cfb.html
+++ b/cfb.html
@@ -24615,5 +24615,230 @@ Are going to reduce the number of meals you eat a day to maybe just one small me
 </div>
 </div>
 
+<div class="message">
+<div class="meta">
+	<div class="user">Gaurav barnwal</div>
+	<div class="id">1527</div>
+	<div class="date">2022-05-08 17:29:48</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>https://www.gyandevta.in/2022/05/list-of-national-parks-of-india-in-hindi.html</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">ferfred2</div>
+	<div class="id">1528</div>
+	<div class="date">2022-05-08 22:01:09</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hallo Sophie,</p>
+
+<p>ich will noch antworten, bevor die Woche wieder richtig losstartet.</p>
+
+<p>Ich kann mir gut vorstellen, dass er mit so einer Reaktion nach der Auszeit nicht gerechnet hat. - Entweder sie meldet ich gar nicht mehr, sie meldet sich und sagt nichts zum Thema, oder sie haelt mir eine Standpauke, dass das aufzuhoeren hat. - Ich denke, hier gingen die Punkte klar an dich.</p>
+
+<p>Auch wenn die Temperaturen bei duenner Kleidung schon noch unangenehm sein koennen in den naechsten Monaten, wird das fuer dich vermutlich zunaechst die kleinere Herausforderung. Dafuer koennte ich mir vorstellen, dass es fuer dich ein recht hungriger Sommer werden wird ;-) Aber ich denke, dass Du Dir sehr bewusst bist, dass Du an dem Abend schon etwas mit dem Feuer gespielt hast.</p>
+
+<p>Als Du ihm klarmachtest, dass du nichts essen willst, obwohl du schon "etwas" Hunger hattest, hat er da nicht gleich nachgefraft, wie viel Du am Tag schon gegessen hattest? Wie "etwas" war es denn wirklich? Hat er Dir am anderen Morgen wenigstens ein Fruehstueck bereitet?</p>
+
+<p>Du schreibst, "In Zukunft soll ihm kein einziger kritischer Gedanke mehr kommen, wenn er mich anschaut. Das wird zwar wahrscheinlich echt schwierig ... " Ich glaube kaum, dass Dir das gelingen wird ... und dass das ueberhaupt wichtig ist. Ich denke, hier ist der Weg das Ziel und wenn man den Weg gut geht, wird er selbstredend auch Erfolge haben. Was genau meine ich damit? Haettest Du ueber Nacht ploetzlich 5 kg weniger auf der Waage, dann wuerde er sich sicherlich auch darueber freuen. Es wuerde aber bei Weitem nicht den Reiz aufwiegen, Dich auf dem Weg dorthin zu begleiten. Ihm wird es gefallen, wie Du Dir Gedanken machst, Dir Plaene machst, darum kaempft, sie auch einzuhalten, will Deine Disziplin, deinen Durchhaltewille beobachten. Ganz nach dem Motto "Erscheinung ueber Komfort" Dazu wuerde dann auch seine Frage passen (wenn Du sie so sauber wiedergegeben hast), <em>wie</em> Du das vorhast und nicht, wieviel Du noch abnehmen willst. Hast Du ueberhaupt schon eine Vorstellung, was ein realistisches Zielgewicht sein koennte?
+Dies gesagt, heisst aber auch, dass es kein natuerliches Ende geben wird. Er wird immer wieder irgendwas finden, woran Du noch arbeiten koenntest. Und das solltest Du dann nicht missverstehen, in dem Sinne, dass er unzufrieden ist mit Dir. Ganz im Gegenteil, er will Dich nur mit neuen Herausforderungen locken - und zwar je erfolgreicher, "haerter zu dir" du bist, desto mehr.</p>
+
+<p>Zum Thema, wie Du das schaffst. Wie du schon schreibst, bildet deine aktuelle Ernaehrung ja schon die richtige Grundlage und davon solltest Du auch grundsaetzlich nicht abweichen. </p>
+
+<p>Ich koennte einen ersten, nicht ganz uneigennuetzigen Vorschlag machen ;-) Wenn Du tagsueber schon sehr diszipliniert warst und Angst hast, am Abend schwach zu werden, dann setz Dich an den PC und schreib etwas hier ins Forum. Das wird Dich dann automatisch an Jakob erinnern, dich erinnern, fuer wen Du das machst. Und Du darfst hier dann gerne auch mit Deinem Durchhaltewillen prahlen.</p>
+
+<p>Ansonsten kannst Du nur - auch um des Reizes / des Spieles willen - einige Highlights setzen.</p>
+
+<p>Du fragst irgendwo, ob Lisa nur Schwimmen geht. Ich wuerde behaupten, dass das Schwimmen der ideale Sport hier ist - zumindest faellt mir nichts ein, dass so viele Aspekte abdeckt.</p>
+
+<p>Eine schoene Woche
+Ferfred</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">HansKn</div>
+	<div class="id">1529</div>
+	<div class="date">2022-05-09 11:46:15</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hello Frogger, thanks for your answer! Where in scandinavia are you from?</p>
+
+<p>Let's call my cousin Ronja from now on, so that we don't have to call her "my cousin" all the time.</p>
+
+<p>So Ronja usually wears shorts and sneakers up until around -5C. Beyond that she wears jeans and if there's a lot of snow she might put on boots. As I wrote in my previous post, she doesn't wear jackets at all, it seems. 
+The tops she wears seem very inconsistent. Sometimes she might wear a short-sleeved crop-top in a snowstorm, other times a hoodie on a warm summer day.
+When at our cottage we go to the sauna almost every day. After that she always wears a towel and crocs in winter, and goes barefoot in summer.
+I hope that's detailed enough!</p>
+
+<p>As to her eating habits, I have never really paid attention to them. I will meet her in three days, so we will see then. She is rather skinny though.</p>
+
+<p>For me the german posts are no issue. I actually learned a bit of german in school and what I don't understand, I can always translate with google.</p>
+
+<p>Have a nice week!</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">frogger4y</div>
+	<div class="id">1530</div>
+	<div class="date">2022-05-09 20:48:34</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Thanks for your reply Hans:)</p>
+
+<p>I am from Norway.
+Ronja sounds like a swomen after my taste.
+Like how she dresses, I  love women in jeans so my girlfriend, Hanne, wears almost jeans always.</p>
+
+<p>The skinnier a girl is the more cold she feels I believe. Love when you can she girls ribs covered in goosebumps:)</p>
+
+<p>Hope to hear more from you, have a nice week! </p>
+
+<p>Best regards, Frogger</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">frogger4y</div>
+	<div class="id">1531</div>
+	<div class="date">2022-05-09 20:54:37</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hi Ferfred,</p>
+
+<p>How are you and Lisa and Markus doing?
+She must be a bit glad no the spring a warmer weather is coming so she wont freeze so much:)
+I have some questions about her diet:
+How much do you think she eats in a day? Do she eat every day? 
+And how many cigaretts do she smoke a day?</p>
+
+<p>Hope to hear from you.
+Have a nice week.</p>
+
+<p>Best regards, Frogger</p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">Martin99</div>
+	<div class="id">1532</div>
+	<div class="date">2022-05-13 13:17:53</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hallo Sophie, 
+Dein Freund kann sich glücklich schätzen, du hast sicher eine super Figur, mit 54kg bei 1,73 cm bist du sehr schlank und dein Outfit wird deinem Freund sicher auch gefallen. </p>
+
+<p>Du schreibst:ich will einfach ein bisschen herausstechen und in allem besser/sexier sein als die anderen Mädels um mich herum.</p>
+
+<p>Ich glaube so denkt auch Lisa, sie möchte sich für sich und Marcus von den anderen sexier unterscheiden. Marcus möchte sie schlanker und nur in sexy Klamotten sehen und zeigen, ganz gleich, ob das Wetter es zulässt. Dabei reizt auch Lisa die Aufmerksamkeit und Bewunderung. Und die ist umso größer, je kälter es ist. </p>
+
+<p>Du: Zum einen kann das ja nicht so gesund sein, dauernd zu frieren, und so zu hungern wie Martins Lisa z. B. geht auf Dauer bestimmt auf die eine oder andere Weise schief. Aber das verlangt ja auch niemand von mir!</p>
+
+<p>Ganz sicher ist es nicht gesund, Lisa ist während der kalten Jahreszeit ständig erkältet,  manchmal mit schlimmen Hustenanfaellen, selbst eine Blasenentzündung habe ich schon mal mitbekommen, doch all das hält Lisa nicht davon ab, bei Wind und Wetter ohne wärmende Klamotten unterwegs zu sein. Auch wenn sie unkontrolliert zittert, drängt Lisa nie darauf ins Warme zu kommen oder vielleicht etwas zu essen, wenn sie ihr Hungergefuehl nur noch durch Zigaretten etwas unterdrücken kann. Auf ihre Erkaeltung angesprochen, behauptet sie dann mit klappernden Zähnen: Der Husten kommt vom Rauchen, bin nur leicht erkältet, wird schon wieder besser. </p>
+
+<p>Du schreibst: Aber das verlangt ja auch niemand von mir!
+Von Lisa verlangt Marcus auch nichts, doch er stellt Lisa vor immer neue Herausforderungen. Ausserdem macht er immer Komplimente und Andeutungen, dass sie es sich leisten kann Haut zu zeigen  Also sei vorsichtig Sophie, dass du nicht übertreibst, vorallem wenn es um deine Gesundheit geht. Ich habe oft Angst um Lisa, gerade wenn Lisa schon völlig unterkühlt ist und er sie fragt, ob sie noch eine Runde im See schwimmen möchte oder ob sie etwas dagegen hat, wenn sie mit Freunden noch weiter etwas im Freien unternehmen.
+Lisa würde niemals beklagen, dass ihr zu kalt ist oder sie unbedingt etwas Essen muss. Sie hat zu große Angst Marcus zu enttäuschen, vielleicht auch, weil sie einige Jahre älter ist und trotzdem attraktiver erscheinen möchte, als die jüngeren Freundinnen von Marcus Kumpels.</p>
+
+<p>Zu deinen weiteren Fragen: 
+Sie scheint ja echt auf Dauerdiät zu sein. Isst sie da nicht viel zu wenig, sodass sie auf Dauer total abmagert?</p>
+
+<p>Dauerdiät trifft es schon. Doch als total abgemagert würde ich sie nicht bezeichnen. Auf jeden Fall zeichnen sich ihre Rippen, Schlüsselbeine, Schulterblaetter oder auch ihre Hüftknochen klar ab, dabei hat es Lisa  geschafft ihren Fettanteil noch weiter zu reduzieren und trotzdem Muskeln aufzubauen, deshalb kann sie ihren Erfolg auch nicht auf der Waage sehen und ist der Meinung, dass sie  nicht schlank genug ist.</p>
+
+<p> Es klingt ja gerade so, dass sie quasi nie eine normale Mahlzeit ist. </p>
+
+<p>Stimmt eine normale Mahlzeit habe ich mit ihr noch nie erlebt. </p>
+
+<p>If sie allein ist, isst sie vermutlich ein kleines bisschen mehr, als wenn sie mit Markus irgendwo hingeht oder? </p>
+
+<p>Auch das ist richtig, wenn sie allein ist, dann isst sie so spezielle Eiweißreiche Fertignahrung. Mit Marcus gemeinsam wegzugehen bedeutet für Lisa Zigaretten und vielleicht einen Espresso im Restaurant. </p>
+
+<p>Und sie geht ja immer im See schwimmen. Ist das alles, was sie an Sport macht oder macht sie auch Krafttraining?</p>
+
+<p>Ich wusste nur vom Schwimmen, habe sie aber mal gefragt, ob das für ihre Top Figur reicht, sie strich über ihren Bauchmuskeln und meinte, dass sie dafür extra trainieren muss. </p>
+
+<p>LG Martin </p>
+
+</div>
+</div>
+</div>
+
+<div class="message">
+<div class="meta">
+	<div class="user">Martin99</div>
+	<div class="id">1533</div>
+	<div class="date">2022-05-13 16:51:59</div>
+</div>
+<div class="messbody">
+<div class="original">
+<p>Hallo Ferfred, 
+Noch schnell ein paar Antworten zu deinen Fragen.</p>
+
+<p>Ich frage mich manchmal, ob sich Lisa schon damit gefunden hat, keine warme Kleidung oder etwas zu Essen zu bekommen, wenn sie mit Marcus unterwegs ist. </p>
+
+<p>Diese Frage stelle ich mir auch, aber ich denke: ja, sie hat sich nicht nur damit abgefunden, sondern möchte auch zeigen, dass sie hart genug zu sich selbst ist, für Marcus zu hungern, unentwegt zu trainieren und ihre Traumfigur höchstens mit Gänsehaut zu bedecken. </p>
+
+<p>ZB als ihr nach ihrem Schwimmtraining in den Garten gegangen seid und Marcus sich passende Kleidung herausgesucht hat. Hatte sie darauf gehofft, auch etwas warmes mitgebracht zu bekommen? </p>
+
+<p>Hier denke ich, dass sie es zumindest gehofft hat, da sie wirklich völlig durchgefroren war, teilweise unkontrolliert zitterte und Marcus das auch kommentierte: Lisa findest du nicht auch, dass es wieder kühler ist, als die letzten Tage? Lisa antwortete mit blauen Lippen und klappernden Zähnen: Ja, finde ich auch, echt noch mal kalt heute. Marcus: Mir ist es zu kalt in meiner Jacke, ich muss mir erstmal etwas Wärmeres anziehen.</p>
+
+<p>Oder als er ihr Flip-Flops oder später einen Mantel angeboten hat: Wollte er Lisa nur herausfordern oder war es fürsorglich gemeint? </p>
+
+<p>Sowohl als auch, ihm war sicher klar, dass es barfuß und mit so viel nackter Haut zu kalt war und Lisa an ihre Grenzen kommt, doch mit der Art und Weise, wie er Lisa die Sachen anbietet, zeigt er, dass er enttäuscht wäre, wenn Lisa sie annehmen würde. Andererseits gibt er Lisa die Möglichkeit auszusteigen. </p>
+
+<p>Oder geniesst es Lisa vielleicht sogar, noch mal eins oben drauf zu legen, wenn alle anderen eigentlich schon der Meinung sind, dass sie schon extrem tapfer war?</p>
+
+<p>Auf jeden Fall, geniesst sie es, sich so zu zeigen, wie Marcus es sich vorstellt, vielleicht auch ihre Grenzen zu finden, in der Gewissheit, dass sie zumindest von den Männern dafür bewundert wird und vielleicht von Marcus belohnt. </p>
+
+<p>Gehe ich recht in der Annahme, dass sie bei beiden berichteten Erlebnissen (Garten, Party) solange du warst, keinen Bissen zu essen bekommen hat ... und wahrscheinlich den ganzen Tag noch nichts?</p>
+
+<p>Was sie vorher gegessen hat kann ich nicht sagen, doch als wir auf der Party das Buffet angeschaut haben, meinte Lisa nur, dass sie sich schon den ganzen Tag darauf gefreut habe und großen Hunger hat. Marcus: Denke an deine Figur. Ich reichte ihr einen Teller, doch  Lisa zündete sich die naechste Zigarette an: Nein, danke, mir reicht auch mal die hier. Danach habe ich Lisa fast ununterbrochen rauchen sehen, aber nichts essen. </p>
+
+<p>Das Partyoutfit war ja richtig scharf. Seid wann steht Marcus auf HighHeels? </p>
+
+<p>Zu besonderen Anlässen trägt Lisa auch High Heels.</p>
+
+<p>Waren sie eher gemässigt oder er 10cm-Versionen? </p>
+
+<p>Waren ziemlich hoch. </p>
+
+<p>Ich stelle mir das extrem anstrengend vor, auf solchen Schuhen zu laufen, wenn einem die Beine auch noch schlottern.</p>
+
+<p>Ja, es war extrem anstrengend für Lisa. Sie hatte schon Schwierigkeiten darin zu stehen, ihre zitternden Beinmuskeln waren super zu sehen, durch die Körperspannung natürlich auch alle anderen Muskeln. Beim Laufen konnte man beobachten, dass sie sich voll konzentrieren musste. Auf der Terrasse setzte sie sich später immer mal auf einen Tisch, so konnte sie ihre High Heels tragen, ohne darauf stehen zu müssen. Die Herren konnten ihre Blicke dabei nicht von Lisas braungebrannten, muskulösen, schlanken gänsehautbedeckten  Beinen lassen. Am späten Abend konnte Lisa ihr schlotternden Beine nicht mehr kontrollieren, hat die High Heels dann ausgezogen, lief nun barfuß auf dem kalten Boden.  </p>
+
+<p> Wie hoch war der Rock denn geschlitzt ;-)</p>
+
+<p>Es war ein superkurzer enger Minirock, der auf einer Seite einen Schlitz bis zum Bund hat, dadurch ist der Oberschenkel fast komplett zu sehen.</p>
+
+<p>LG Martin </p>
+
+</div>
+</div>
+</div>
+
 </body>
 </html>
